add a second screew for jobswe details

--- a/UI-Angular/JobsWeb/src/app/app.component.html
+++ b/UI-Angular/JobsWeb/src/app/app.component.html
@@ -1,7 +1,7 @@
+
 <app-jobsweb-search></app-jobsweb-search>
 <!--
-  <app-lancamento-cadastro></app-lancamento-cadastro>
-  <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
 
-  <app-pessoa-cadastro></app-pessoa-cadastro>
+  <app-jobsweb-details></app-jobsweb-details>
+
 -->
