--- a/UI-Angular/JobsWeb/src/app/jobsweb/jobsweb-search/jobsweb-search.component.html
+++ b/UI-Angular/JobsWeb/src/app/jobsweb/jobsweb-search/jobsweb-search.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="ui-g">
 
-    <form autocomplete="off" (ngSubmit)="pesquisar()">
+    <form autocomplete="off" (ngSubmit)="search()">
       <div class="ui-g-12 ui-fluid" class="form-inline">
-        <input pInputText type="text" name="nome" placeholder="Job Title" [(ngModel)]="filtro.nome">
+        <input pInputText type="text" name="title" placeholder="Job Title" [(ngModel)]="filter.title">
         <button pButton type="submit" label="Search"></button>
       </div>
     </form>
@@ -12,15 +12,16 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-dataTable [value]="pessoas" [responsive]="true" emptyMessage="Nenhuma pessoa encontrada" [paginator]="true" [rows]="filtro.itensPorPagina"
-        [lazy]="true" [totalRecords]="totalRegistros" (onLazyLoad)="aoMudarPagina($event)">
+      <p-dataTable [value]="jobsweb" [responsive]="true" emptyMessage="No jobs available." [paginator]="true" [rows]="filter.itensPage"
+        [lazy]="true" [totalRecords]="totalRecords" (onLazyLoad)="changePage($event)" #table>
         <p-column field="title" header="Title"></p-column>
         <p-column field="position" header="Position"></p-column>
         <p-column field="location" header="Location"></p-column>
+        <p-column field="publication" header="Posted"></p-column>
         <p-column>
-          <ng-template pTemplate="body">
-            <button pButton icon="fa-search-plus" pTooltip="More details" tooltipPosition="top"></button>
-            <button pButton type="submit" label="Apply Now" icon="fa-plus" class="ui-button-success"></button>
+          <ng-template let-job="rowData" pTemplate="body">
+            <button pButton icon="fa-search-plus" pTooltip="More details" tooltipPosition="top" (click)="showJobDetails(job)"></button>
+            <button pButton type="submit" label="Apply Now" icon="fa-plus" pTooltip={{job.title}} class="ui-button-success"></button>
           </ng-template>
         </p-column>
       </p-dataTable>
@@ -34,7 +35,7 @@
         <p> Join our talent community and get MyCareer news and job alerts delivered to your inbox.</p>
         <div align="center">
           <label>Email</label>
-          <input pInputText type="email" name="nome" placeholder="alexanderSouza@domain.com">
+          <input pInputText type="email" name="nome" placeholder="name@domain.com">
           <button pButton type="submit" label="Sign Up"></button>
 
         </div>
@@ -42,5 +43,10 @@
     </div>
   </form>
 
+  <p-sidebar [(visible)]="display" [fullScreen]="true" [baseZIndex]="10000" #title>
+      <h1 style="font-weight:normal">{{jobTitle}}</h1>
+      <hr>
+      <p innerHtml="{{ jobDescription }}">
+  </p-sidebar>
 
 </div>
