Add fields for applicants

--- a/UI-Angular/JobsWeb/src/app/applicant/applicant-add/applicant-add.component.html
+++ b/UI-Angular/JobsWeb/src/app/applicant/applicant-add/applicant-add.component.html
@@ -1,34 +1,120 @@
 <div class="container">
-  <form #f autocomplete="off" >
+  <form #f autocomplete="off">
 
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>Nova Pessoa</h1>
+        <h1>Apply for Job</h1>
       </div>
 
-      <div class="ui-g-12 ui-fluid">
-        <label>Nome</label>
-        <input pInputText type="text" name="nome"  #nome required minlength="5">
+      <div class="ui-g-12 ui-md-8 ui-fluid">
+        <span class="ui-float-label">
+          <input pInputText type="text" id="float-input" name="logradouro" #logradouro required>
+          <label for="float-input">Name</label>
+        </span>
       </div>
 
-      <div class="ui-g-12 ui-md-9 ui-fluid">
-        <label>Logradouro</label>
-        <input pInputText type="text" name="logradouro" #logradouro required>
-
+      <div class="ui-g-12 ui-md-4 ui-fluid">
+        <span class="ui-float-label">
+          <input pInputText type="email" id="float-input" name="logradouro" #logradouro required>
+          <label for="float-input">Email</label>
+        </span>
       </div>
 
-      <div class="ui-g-12 ui-md-3 ui-fluid">
-        <label>Número</label>
-        <input pInputText type="text" name="numero"  #numero required>
+      <div class="ui-g-12 ui-md-6 ui-fluid">
+        <span class="ui-float-label">
+          <input pInputText type="email" id="float-input" name="logradouro" #logradouro required>
+          <label for="float-input">Phone number</label>
+        </span>
+      </div>
 
+      <div class="ui-g-12 ui-md-6 ui-fluid">
+        <span class="ui-float-label">
+          <input pInputText type="email" id="float-input" name="logradouro" #logradouro required>
+          <label for="float-input">URL Profile</label>
+        </span>
+      </div>
+
+      <div class="ui-g-12 ui-md-4 ui-fluid">
+          <h3>Upload CV</h3>
+        <p-fileUpload mode="basic" name="demo[]" url="./upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onBasicUpload($event)"></p-fileUpload>
+      </div>
+
+
+
+      <!-- Text are for cover letter-->
+      <div class="ui-g-12">
+        <h3>Cover Letter</h3>
+        <p-editor [style]="{'height':'320px'}">
+          <p-header>
+            <span class="ql-formats">
+              <select class="ql-size">
+                <option value="small">Petit</option>
+                <option selected></option>
+                <option value="large">Sous-titre</option>
+                <option value="huge">Titre</option>
+              </select>
+            </span>
+            <span class="ql-formats">
+              <button class="ql-bold" aria-label="Bold"></button>
+              <button class="ql-italic" aria-label="Italic"></button>
+              <button class="ql-underline" aria-label="Underline"></button>
+              <button class="ql-strike" aria-label="Strike"></button>
+            </span>
+            <span class="ql-formats">
+              <select title="Text Color" class="ql-color" defaultValue="rgb(0, 0, 0)">
+                <option value="rgb(0, 0, 0)" label="rgb(0, 0, 0)"></option>
+                ...
+                <option value="rgb(61, 20, 102)" label="rgb(61, 20, 102)"></option>
+              </select>
+              <span class="ql-format-separator"></span>
+              <select title="Background Color" class="ql-background" defaultValue="rgb(255, 255, 255)">
+                <option value="rgb(0, 0, 0)" label="rgb(0, 0, 0)"></option>
+                ...
+                <option value="rgb(61, 20, 102)" label="rgb(61, 20, 102)"></option>
+              </select>
+            </span>
+            <span class="ql-formats">
+              <button class="ql-list" value="ordered"></button>
+              <button class="ql-list" value="bullet"></button>
+              <select title="Text Alignment" class="ql-align">
+                <option selected>Gauche</option>
+                <option value="center" label="Center"></option>
+                <option value="right" label="Right"></option>
+                <option value="justify" label="Justify"></option>
+              </select>
+            </span>
+            <span class="ql-formats">
+              <button aria-label="Link" class="ql-link"></button>
+              <button aria-label="Image" class="ql-image"></button>
+            </span>
+          </p-header>
+        </p-editor>
       </div>
 
 
       <div class="ui-g-12">
-        <button pButton type="submit" label="Salvar" [disabled]="f.invalid"></button>
-        <button pButton type="button" label="Novo" class="ui-button-info"></button>
+        <button pButton type="submit" label="Back" [disabled]="f.invalid"></button>
+        <button pButton type="button" label="Apply" class="ui-button-info"></button>
       </div>
+
     </div>
 
   </form>
 </div>
+
+<!--
+  public static volatile SingularAttribute<Applicants, Long> codigo;
+	public static volatile SingularAttribute<Applicants, Jobs> job;
+	public static volatile SingularAttribute<Applicants, String> full_name;
+	public static volatile SingularAttribute<Applicants, String> email;
+	public static volatile SingularAttribute<Applicants, String> cover_letter;
+	public static volatile SingularAttribute<Applicants, String> phone_number;
+	public static volatile SingularAttribute<Applicants, String> profile_url;
+	public static volatile SingularAttribute<Applicants, String> upload_cv;
+	public static volatile SingularAttribute<Applicants, String> status;
+	public static volatile SingularAttribute<Applicants, Long> score_question;
+	public static volatile SingularAttribute<Applicants, Long> score_test;
+	public static volatile SingularAttribute<Applicants, Long> score_other;
+	public static volatile SingularAttribute<Applicants, LocalDate> applicant_date;
+	public static volatile SingularAttribute<Applicants, String> hr_notes;
+-->
