Implements the applicants POST ang GET on API

--- a/UI-Angular/JobsWeb/src/app/app.component.html
+++ b/UI-Angular/JobsWeb/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 
-<app-jobsweb-search></app-jobsweb-search>
+<app-applicant-add></app-applicant-add>
 <!--
 
   <app-jobsweb-search></app-jobsweb-search>
