--- a/UI-Angular/JobsWeb/src/app/app.component.html
+++ b/UI-Angular/JobsWeb/src/app/app.component.html
@@ -1,10 +1,12 @@
 
 
-<app-applicant-add></app-applicant-add>
+<router-outlet></router-outlet>
+<ng2-toasty></ng2-toasty>
+
 <!--
 
   <app-jobsweb-search></app-jobsweb-search>
-<app-applicant-add></app-applicant-add>
+  <app-applicant-add></app-applicant-add>
 
   <app-jobsweb-details></app-jobsweb-details>
 
