--- a/UI-Angular/JobsWeb/src/app/applicant/applicant-add/applicant-add.component.html
+++ b/UI-Angular/JobsWeb/src/app/applicant/applicant-add/applicant-add.component.html
@@ -3,7 +3,7 @@
 
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>Apply for Job</h1>
+        <h1>Apply for {{title}}</h1>
       </div>
 
       <div class="ui-g-12 ui-md-8 ui-fluid">
