--- a/UI-Angular/JobsWeb/src/app/jobsweb/jobsweb-search/jobsweb-search.component.html
+++ b/UI-Angular/JobsWeb/src/app/jobsweb/jobsweb-search/jobsweb-search.component.html
@@ -21,7 +21,7 @@
         <p-column>
           <ng-template let-job="rowData" pTemplate="body">
             <button pButton icon="fa-search-plus" pTooltip="More details" tooltipPosition="top" (click)="showJobDetails(job)"></button>
-            <button pButton type="submit" label="Apply Now" icon="fa-plus" tooltipPosition="top" pTooltip={{job.title}} class="ui-button-success" [routerLink]="['/applicantadd', job.code]"></button>
+            <button pButton type="submit" label="Apply Now" icon="fa-plus" tooltipPosition="top" pTooltip={{job.title}} class="ui-button-success" [routerLink]="['/applicantadd', job.code, job.title]"></button>
           </ng-template>
         </p-column>
       </p-dataTable>
@@ -36,10 +36,8 @@
         <div align="center">
           <label>Email</label>
 
-          <input pInputText type="text" [(ngModel)]="email" name="email" placeholder="name@domain.com" #emailAlert1="ngModel" #emailAlert>
-          <p *ngIf="emailAlert1.errors?.emailAlert">error message</p>
-
-          <button pButton type="submit" label="Sign Up" [disabled]="!alertForm.valid" required email></button>
+          <input pInputText type="email" [(ngModel)]="email" name="email" placeholder="name@domain.com" #emailAlert="ngModel">
+          <button pButton type="submit" label="Sign Up" [disabled]="alertForm.invalid"></button>
 
         </div>
       </div>
