--- a/UI-Angular/JobsAdmin/src/app/dashboard/dashboard.component.html
+++ b/UI-Angular/JobsAdmin/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid dashboard">
     <div class="ui-g-12 ui-md-4">
         <div class="card clearfix summary">
-            <span class="title">Users</span>
+            <span class="title">Users OO</span>
             <span class="detail">Number of visitors</span>
             <span class="count visitors">12</span>
         </div>
@@ -20,7 +20,7 @@
             <span class="count revenue">$3,200</span>
         </div>
     </div>
-    
+
     <div class="ui-g-12 ui-md-6 ui-lg-3">
         <div class="highlight-box">
             <div class="initials" style="background-color:#007be5;color:#00448f">TV</div>
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="ui-g-12 ui-md-6 ui-lg-4">
         <p-panel header="Tasks" [style]="{'height':'100%'}">
             <ul class="task-list">
@@ -98,7 +98,7 @@
             </ul>
         </p-panel>
     </div>
-    
+
     <div class="ui-g-12 ui-md-6 ui-lg-4">
         <p-panel header="Contact Us" [style]="{'text-align':'center','background':'#fff','height':'100%'}">
             <div class="ui-g">
