--- a/UI-Angular/JobsAdmin/src/app/app.component.html
+++ b/UI-Angular/JobsAdmin/src/app/app.component.html
@@ -1,15 +1,15 @@
 <ng2-toasty [position]="'top-right'"></ng2-toasty>
 
-<app-navbar *ngIf="exibindoNavbar()"></app-navbar>
+<app-navbar *ngIf="showNavbar()"></app-navbar>
 <router-outlet></router-outlet>
 
 
 
-<p-confirmDialog header="Confirmação" icon="fa fa-question-circle" #confirmacao>
+<p-confirmDialog header="Confirmation" icon="fa fa-question-circle" #confirmation>
   <p-footer>
-    <button type="button" pButton icon="fa-check" label="Sim"
-      (click)="confirmacao.accept()"></button>
-    <button type="button" pButton icon="fa-times" label="Não"
-      (click)="confirmacao.reject()"></button>
+    <button type="button" pButton icon="fa-check" label="Yes"
+      (click)="confirmation.accept()"></button>
+    <button type="button" pButton icon="fa-times" label="No"
+      (click)="confirmation.reject()"></button>
   </p-footer>
 </p-confirmDialog>
