--- a/UI-Angular/JobsAdmin/src/app/security/login-form/login-form.component.html
+++ b/UI-Angular/JobsAdmin/src/app/security/login-form/login-form.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar">
+
+  <div class="container">
+    <div class="ui-g">
+      <div class="ui-g-12">
+
+        <img src="assets/layout/images/logo.png">
+
+      </div>
+    </div>
+  </div>
+
+</nav>
+
 <div class="container" style="max-width: 400px; margin: auto">
 
   <form autocomplete="off" #f="ngForm">
