--- a/UI-Angular/JobsAdmin/src/styles.css
+++ b/UI-Angular/JobsAdmin/src/styles.css
@@ -43,3 +43,16 @@ label {
   width: 90px;
   text-align: center;
 }
+
+.col-size {
+  width: 150px;
+  text-align: center;
+}
+
+.col-acoes {
+  width: 90px;
+  text-align: center;
+}
+
+
+
