--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-search/applicants-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-search/applicants-search.component.html
@@ -6,6 +6,7 @@
         <br/>
         <input pInputText type="text" name="fullname" placeholder="Applicant name" [(ngModel)]="filter.fullname">
         <button pButton type="submit" icon="fa-search" pTooltip="Search" tooltipPosition="top"></button>
+        {{codeJob}} {{title}}
       </div>
     </form>
   </div>
@@ -18,14 +19,15 @@
         [lazy]="true" [totalRecords]="totalRecords" (onLazyLoad)="changePage($event)" #table>
         <p-column field="fullname" header="Name"></p-column>
 
-        <p-column field="email" header ="Email" >
+        <p-column field="phone_number" header="Phone number"></p-column>
+        <!--
+
+                  <p-column field="email" header ="Email" >
             <ng-template let-appl="rowData" pTemplate type="body">
                 <a target="_blank" href="mailto:{{appl.email}}">{{appl.email}}</a>
             </ng-template>
         </p-column>
 
-        <p-column field="phone_number" header="Phone number"></p-column>
-        <!--
         <p-column field="profile_url" header ="Profile" >
             <ng-template let-row="rowData" pTemplate type="body">
                 <a target="_blank" href="{{row.profile_url}}">{{row.profile_url}}</a>
@@ -35,20 +37,24 @@
         <p-column field="status" header="Status" styleClass="col-size"></p-column>
 
         <p-column header="Date" styleClass="col-size">
-            <ng-template let-appl="rowData" pTemplate="body">
-              <span>{{ appl.applicant_date | date:'dd/MM/yyyy' }}</span>
-            </ng-template>
-          </p-column>
+          <ng-template let-appl="rowData" pTemplate="body">
+            <span>{{ appl.applicant_date | date:'dd/MM/yyyy' }}</span>
+          </ng-template>
+        </p-column>
 
-          <p-column styleClass="col-size">
-            <ng-template let-appl="rowData" pTemplate="body">
-                <button pButton icon="fa-user" pTooltip="Applicants" tooltipPosition="top" [routerLink]="['/applicants', appl.code]"></button>
-                <button pButton icon="fa-pencil" pTooltip="Edit" tooltipPosition="top" class="ui-button-warning" [routerLink]="['/applicants', appl.code]" [disabled]="!auth.havePermission('ROLE_ADD_APPLICANT')"></button>
-                <button pButton icon="fa-trash" pTooltip="Delete" tooltipPosition="top" (click)="confirmationDelete(appl)" [disabled]="!auth.havePermission('ROLE_REMOVE_APPLICANT')" class="ui-button-danger"></button>
-            </ng-template>
-          </p-column>
+        <p-column field="job.title" header="Applied position"></p-column>
 
-        </p-dataTable>
+        <p-column styleClass="col-size">
+          <ng-template let-appl="rowData" pTemplate="body">
+            <button pButton icon="fa-balance-scale" pTooltip="Evaluation of the candidate" tooltipPosition="top" [routerLink]="['/applicants', appl.code]"></button>
+            <button pButton icon="fa-pencil" pTooltip="Edit" tooltipPosition="top" class="ui-button-warning" [routerLink]="['/applicants', appl.code]"
+              [disabled]="!auth.havePermission('ROLE_ADD_APPLICANT')"></button>
+            <button pButton icon="fa-trash" pTooltip="Delete" tooltipPosition="top" (click)="confirmationDelete(appl)" [disabled]="!auth.havePermission('ROLE_REMOVE_APPLICANT')"
+              class="ui-button-danger"></button>
+          </ng-template>
+        </p-column>
+
+      </p-dataTable>
     </div>
   </div>
 
