Update background - CSS

--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-add/applicants-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-add/applicants-add.component.html
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="container card-white">
   <form autocomplete="off" #applicantForm="ngForm" (ngSubmit)="addApplicant(applicantForm)">
 
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>{{titlePage}}</h1>
+        <hr>
       </div>
 
       <div class="ui-g-12 ui-md-8 ui-fluid">
