--- a/UI-Angular/JobsAdmin/src/app/jobs/jobs-add/jobs-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/jobs/jobs-add/jobs-add.component.html
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="container card-white">
   <form autocomplete="off" #jobForm="ngForm" (ngSubmit)="addJob(jobForm)">
 
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>{{titlePage}}</h1>
+        <hr>
       </div>
 
       <div class="ui-g-12 ui-md-8 ui-fluid">
