--- a/UI-Angular/JobsAdmin/src/app/jobs/jobs-search/jobs-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/jobs/jobs-search/jobs-search.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container card-white">
   <div class="ui-g">
 
     <form autocomplete="off" (ngSubmit)="search()">
