--- a/UI-Angular/JobsAdmin/src/styles.css
+++ b/UI-Angular/JobsAdmin/src/styles.css
@@ -1,9 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "latoregular", "Trebuchet MS", Arial, Helvetica, sans-serif;
   color: #404C51;
+
+  font-size: 14px;
+  background-color: #f4f6fa;
+  min-height: 100%;
 }
+
+
+.card-white {
+  background-color: #fff;
+}
+
 
 a {
   color: #337ab7;
