--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-filter/applicants-filter.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-filter/applicants-filter.component.html
@@ -3,25 +3,26 @@
   <div class="ui-g">
     <form autocomplete="off" (ngSubmit)="search()">
       <div class="ui-g-12 ui-fluid" class="form-inline">
-        <br/>
-        <input pInputText type="text" name="fullname" placeholder="Applicant name" [(ngModel)]="filter.fullname">
-        <button pButton type="submit" icon="fa-search" pTooltip="Search" tooltipPosition="top"></button>
-        {{codeJob}} {{title}}
+        <h2> Position - {{title}}</h2>
       </div>
     </form>
   </div>
 
   <div class="ui-g">
-    <div class="ui-g-12" >
-      <p-dataTable [value]="applicants" [responsive]="true" emptyMessage="No applicants available." [paginator]="true" [rows]="filter.itensPage"
-        [lazy]="true" [totalRecords]="totalRecords" (onLazyLoad)="changePage($event)" #table >
+    <div class="ui-g-12">
 
-        <p-column header="Name">
+        <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
+            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+            <input #gb type="text" pInputText size="50" placeholder="Applicants">
+        </div>
+
+      <p-dataTable [value]="applicants" [responsive]="true" emptyMessage="No applicants available." [globalFilter]="gb" #table>
+
+
+          <p-column field="fullname" header="Name" styleClass="col-size"></p-column>
+
+        <p-column header="Applied" styleClass="col-size">
           <ng-template let-appl="rowData" pTemplate="body">
-            <span>
-              <strong> {{appl.fullname}}</strong>
-            </span>
-            <br>
             <small>{{ appl.applicant_date | date:'dd/MM/yyyy' }}</small>
           </ng-template>
         </p-column>
@@ -35,6 +36,7 @@
             </small>
           </ng-template>
         </p-column>
+
 
 
         <!--
@@ -60,9 +62,6 @@
         <p-column field="status" header="Status" styleClass="col-size"></p-column>
 
 
-
-        <p-column field="job.title" header="Applied position"></p-column>
-
         <p-column styleClass="col-size" header="Rating">
           <ng-template let-appl="rowData" pTemplate="body">
             <p-rating [(ngModel)]="rating1" [cancel]="false" readonly="true" pTooltip="Evaluation of the candidate" tooltipPosition="top"></p-rating>
@@ -83,8 +82,12 @@
 
       </p-dataTable>
     </div>
-  </div>
 
+    <div class="ui-g-12">
+      <button pButton type="button" label="Back" (click)="backClicked()"></button>
+    </div>
+
+  </div>
 
 
   <p-growl [(value)]="msgs"></p-growl>
